# nse-quote

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: preopen.rs  price_only.rs  quote.rs
src/: client.rs  error.rs  lib.rs  models.rs
tests/: refresh_fixture.rs
