[package]
name = "nse-quote"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
reqwest = { version = "0.13.1", features = [ "cookies", "json", "multipart", "rustls", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
