[package]
name = "nse-quote"
version = "0.1.100"
edition = "2024"

[dependencies]
thiserror = "2.0"
reqwest = { version = "0.13.2", features = [ "cookies", "json", "multipart", "rustls", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
